workflow is added

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.18.0-18.0.pre.54'
+          flutter-version: '3.22.0'
 
       - name: Run flutter doctor
         run: flutter doctor
