--- a/.github/workflows/flutter_matrix_ci.yml
+++ b/.github/workflows/flutter_matrix_ci.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Analyze code
         run: flutter analyze
 
-      - name: Run unit tests
-        run: flutter test
+      # - name: Run unit tests
+      #   run: flutter test
