--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -1,83 +1,51 @@
-name: Android Release
+# name: Android Release Build
 
-on:
-  push:
-    branches: [ main ]          # daily builds
-  create:
-    tags:                       # e.g. v1.2.3   → triggers real release
-      - v*
+# on:
+#   push:
+#     tags:
+#       - 'v*.*.*' # triggers only on version tags like v1.0.0
 
-jobs:
-  build-android:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     name: Build Android APK
+#     runs-on: ubuntu-latest
 
-    steps:
-    # 1️⃣  Checkout
-    - uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-    # 2️⃣  Java (Gradle 8 needs JDK17+)
-    - uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 17
+#       - name: Set up Java
+#         uses: actions/setup-java@v3
+#         with:
+#           distribution: 'temurin'
+#           java-version: 17
 
-    # 3️⃣  Flutter
-    - uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.22.0'
+#       - name: Set up Flutter
+#         uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: '3.22.0'
 
-    # 4️⃣  Caches (pub + gradle)  ⚡
-    - uses: actions/cache@v3
-      with:
-        path: |
-          ~/.pub-cache
-          ~/.gradle/caches
-        key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}-gradle
+#       - name: Install dependencies
+#         run: flutter pub get
 
-    # 5️⃣  Re-create keystore & key.properties from secrets
-    - name: Decode keystore
-      run: |
-        echo "$KEYSTORE_BASE64" | base64 -d > android/app/release.keystore
-        cat <<EOF > android/key.properties
-        storePassword=${{ secrets.KEYSTORE_PASSWORD }}
-        keyPassword=${{ secrets.KEY_PASSWORD }}
-        keyAlias=${{ secrets.KEY_ALIAS }}
-        storeFile=release.keystore
-        EOF
-      env:
-        KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+#       - name: Decode keystore from base64
+#         run: |
+#           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
 
-    # 6️⃣  Get deps & static checks
-    - run: flutter pub get
-    - run: flutter analyze --no-fatal-warnings  # optional looseness
-    - run: flutter test
+#       - name: Set up signing configs
+#         run: |
+#           echo "
+#           storeFile=keystore.jks
+#           keyAlias=${{ secrets.KEY_ALIAS }}
+#           storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+#           keyPassword=${{ secrets.KEY_PASSWORD }}
+#           " > android/key.properties
 
-    # 7️⃣  Build signed AAB & APK
-    - run: flutter build appbundle --release
-    - run: flutter build apk --release --split-per-abi
+#       - name: Build APK
+#         run: flutter build apk --release
 
-    # 8️⃣  Upload as build artifacts (always)
-    - uses: actions/upload-artifact@v3
-      with:
-        name: android-build
-        path: |
-          build/app/outputs/bundle/release/app-release.aab
-          build/app/outputs/flutter-apk/*.apk
-
-    # 9️⃣  Create a GitHub Release when a tag is pushed
-    - if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v2    # creates release + uploads assets :contentReference[oaicite:0]{index=0}
-      with:
-        files: |
-          build/app/outputs/bundle/release/app-release.aab
-          build/app/outputs/flutter-apk/*.apk
-
-    # # 🔟  (Optional) Distribute to Firebase testers
-    # - if: ${{ secrets.FIREBASE_SERVICE_ACCOUNT != '' }}
-    #   uses: wzieba/Firebase-Distribution-Github-Action@v1   # uploads to Firebase App Distribution :contentReference[oaicite:1]{index=1}
-    #   with:
-    #     appId: ${{ secrets.FIREBASE_APP_ID }}
-    #     serviceCredentialsFileContent: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-    #     releaseNotesFile: CHANGELOG.md
-    #     groups: testers
-    #     file: build/app/outputs/bundle/release/app-release.aab
+#       - name: Upload APK artifact
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: app-release
+#           path: build/app/outputs/flutter-apk/app-release.apk
