--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -1,51 +1,51 @@
-# name: Android Release Build
+name: Android Release Build
 
-# on:
-#   push:
-#     tags:
-#       - 'v*.*.*' # triggers only on version tags like v1.0.0
+on:
+  push:
+    tags:
+      - 'v*.*.*' # triggers only on version tags like v1.0.0
 
-# jobs:
-#   build:
-#     name: Build Android APK
-#     runs-on: ubuntu-latest
+jobs:
+  build:
+    name: Build Android APK
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Set up Java
-#         uses: actions/setup-java@v3
-#         with:
-#           distribution: 'temurin'
-#           java-version: 17
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
 
-#       - name: Set up Flutter
-#         uses: subosito/flutter-action@v2
-#         with:
-#           flutter-version: '3.22.0'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.22.0'
 
-#       - name: Install dependencies
-#         run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 
-#       - name: Decode keystore from base64
-#         run: |
-#           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+      - name: Decode keystore from base64
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
 
-#       - name: Set up signing configs
-#         run: |
-#           echo "
-#           storeFile=keystore.jks
-#           keyAlias=${{ secrets.KEY_ALIAS }}
-#           storePassword=${{ secrets.KEYSTORE_PASSWORD }}
-#           keyPassword=${{ secrets.KEY_PASSWORD }}
-#           " > android/key.properties
+      - name: Set up signing configs
+        run: |
+          echo "
+          storeFile=keystore.jks
+          keyAlias=${{ secrets.KEY_ALIAS }}
+          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword=${{ secrets.KEY_PASSWORD }}
+          " > android/key.properties
 
-#       - name: Build APK
-#         run: flutter build apk --release
+      - name: Build APK
+        run: flutter build apk --release
 
-#       - name: Upload APK artifact
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: app-release
-#           path: build/app/outputs/flutter-apk/app-release.apk
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
